# adventofcode

rust/2018/day_1/: Cargo.toml
rust/2018/day_1/src/: main.rs
rust/2020/day_1/: Cargo.toml
rust/2020/day_1/src/: main.rs
rust/2021/day_1/: TASK.md
rust/2021/day_1-1/src/: main.rs
rust/2021/day_1-2/src/: main.rs
rust/2021/day_2-1/: TASK.md
rust/2021/day_2-1/src/: main.rs
rust/2021/day_2-2/src/: main.rs
rust/2021/day_3-1/src/: main.rs
rust/2021/day_3-2/src/: main.rs
rust/2021/day_4-1/src/: main.rs
rust/2021/day_5-1/: Cargo.toml
rust/2021/day_5-1/src/: main.rs
rust/2021/day_5-2/: Cargo.toml  TASK.md
rust/2021/day_5-2/src/: main.rs
rust/2021/day_6-1/: TASK.md
rust/2021/day_6-1/src/: main.rs
rust/2021/day_6-2/: Cargo.toml
rust/2021/day_6-2/src/: main.rs
rust/2021/day_7-1/src/: main.rs
rust/advent-of-code-2021/: Cargo.toml  Makefile
rust/advent-of-code-2021/src/: day1.rs  lib.rs
rust/advent-of-code-2022/: Cargo.toml  Makefile
rust/advent-of-code-2022/src/: day1.rs  day2.rs  day3.rs  day4.rs  day6.rs  day7.rs  lib.rs
rust/advent-of-code-2024/: Cargo.toml
rust/advent-of-code-2024/src/: day1.rs  day2.rs  day3.rs  lib.rs
