[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2"
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
itertools = "0.13"
nom = "7"
camino = "1.1"
id_tree = "1.8"
color-eyre = "0.6"
